--- a/nextflow.config
+++ b/nextflow.config
@@ -31,11 +31,11 @@ params {
     output_intermediates = false
     seq_qc = false
     assembly_refs = null
-    default_assembly_refs = "squirrel/data/ref_seq.fasta"
+    default_assembly_refs = "data/empty.fa"
     no_mask = false
     no_itr_mask = false
     additional_mask = null
-    default_additional_mask = "squirrel/data/empty.csv"
+    default_additional_mask = "data/empty.csv"
     extract_cds = false
     concatenate = false
     clade = null
