--- a/nextflow.config
+++ b/nextflow.config
@@ -47,7 +47,7 @@ params {
               "--fasta squirrel/data/NC_063383.fasta",
           ]
           agent = null
-          container = "rmcolq/squirrel"
+          container = "articnetworkorg/squirrel"
         }
 }
 
