--- a/nextflow.config
+++ b/nextflow.config
@@ -40,6 +40,7 @@ params {
     concatenate = false
     clade = null
     run_phylo = false
+    include_background = false
     outgroups = null
 
     wf {
@@ -59,7 +60,7 @@ manifest {
     description     = 'Some QUIck Rearranging to Resolve Evolutionary Links.'
     mainScript      = 'main.nf'
     nextflowVersion = '>=20.10.0'
-    version         = '1.0.3'
+    version         = '1.0.6'
 }
 
 executor {
