updates to add new squirrel options

--- a/nextflow.config
+++ b/nextflow.config
@@ -40,7 +40,10 @@ params {
     concatenate = false
     clade = null
     run_phylo = false
+    run_apobec3_phylo = false
     include_background = false
+    additional_background = null
+    default_additional_background = "data/empty.fa"
     outgroups = null
 
     wf {
@@ -60,7 +63,7 @@ manifest {
     description     = 'Some QUIck Rearranging to Resolve Evolutionary Links.'
     mainScript      = 'main.nf'
     nextflowVersion = '>=20.10.0'
-    version         = '1.0.7'
+    version         = '1.0.8'
 }
 
 executor {
