--- a/nextflow.config
+++ b/nextflow.config
@@ -86,6 +86,7 @@ profiles {
     standard {
         docker {
             enabled = true
+            runOptions = "--user \$(id -u):\$(id -g) --group-add 100"
         }
     }
 
