--- a/nextflow.config
+++ b/nextflow.config
@@ -45,6 +45,7 @@ params {
     additional_background = null
     default_additional_background = "data/empty.fa"
     outgroups = null
+    extra_flags = null
 
     wf {
           example_cmd = [
@@ -63,7 +64,7 @@ manifest {
     description     = 'Some QUIck Rearranging to Resolve Evolutionary Links.'
     mainScript      = 'main.nf'
     nextflowVersion = '>=20.10.0'
-    version         = '1.0.8'
+    version         = '1.0.12'
 }
 
 executor {
