switch out to smaller docker image

--- a/nextflow.config
+++ b/nextflow.config
@@ -52,8 +52,8 @@ params {
               "--fasta squirrel/data/NC_063383.fasta",
           ]
           agent = null
-          container = "docker.io/articnetworkorg/squirrel"
-          container_version = "1.1.2"
+          container = "community.wave.seqera.io/library/squirrel"
+          container_version = "1.1.2--93bea1e19d3eb17d"
         }
 }
 
