--- a/nextflow.config
+++ b/nextflow.config
@@ -53,7 +53,7 @@ params {
           ]
           agent = null
           container = "community.wave.seqera.io/library/squirrel"
-          container_version = "1.1.3--28a0fbfa2ec80893"
+          container_version = "squirrel:1.1.4--2f97df798cb33b77"
         }
 }
 
@@ -65,7 +65,7 @@ manifest {
     description     = 'Some QUIck Rearranging to Resolve Evolutionary Links.'
     mainScript      = 'main.nf'
     nextflowVersion = '>=20.10.0'
-    version         = '1.1.3'
+    version         = '1.1.4'
 }
 
 executor {
